group 'co.nvqa'
version '3.0.0'

apply plugin: 'java'


buildscript {
    repositories {
        mavenCentral()
        mavenLocal()
        maven { url 'https://plugins.gradle.org/m2/' }
        maven {
            url "http://nexus3.qa.tech.nv/repository/nvqa-release"
            allowInsecureProtocol = true
        }
    }
    dependencies {
        classpath "gradle.plugin.com.github.viswaramamoorthy:gradle-util-plugins:0.1.0-RELEASE"
        classpath "co.nvqa:common-build:1.0.2"
        //alure
        classpath "io.qameta.allure.gradle.report:allure-report-plugin:2.11.1"
        classpath "io.qameta.allure.gradle.adapter:allure-adapter-plugin:2.11.1"
    }
}


sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url "http://nexus3.qa.tech.nv/repository/nvqa-release"
        allowInsecureProtocol = true
    }
}

dependencies {
    implementation "co.nvqa:common-base:1.0.8"
    implementation "co.nvqa:commons:2.2.9"
    implementation "co.nvqa:common-auth:1.+"
    testImplementation "ch.qos.logback:logback-classic:1.2.3"
    testImplementation "org.apache.poi:poi-ooxml:3.17"
}

project.ext {
    defaultScenarioManager = "co.nvqa.core_api.cucumber.glue.ScenarioManager"
    cucumberGluePackage = [
            "co.nvqa.core_api.cucumber.glue",
            "classpath:co.nvqa.common.cucumber.glue",
            "classpath:co.nvqa.commons.cucumber.glue",
            "classpath:co.nvqa.commonauth.cucumber.glue"
    ]
}

apply plugin: "co.nvqa.common-build"
apply plugin: "io.qameta.allure-adapter"
apply plugin: "io.qameta.allure-report"
